# jupyterlab-dat

./: .editorconfig  .gitignore  .prettierignore  README.md  anaconda-project.yml  environment.yml  jupyter_notebook_config.json  labex.link.txt  labex.txt  package.json  postBuild  setup.cfg  tsconfig.json  tsconfigbase.json
notebooks/: Dat Checkicons.ipynb  References.ipynb  Road Atlas.ipynb  Some Tricks.ipynb
py_src/jupyter_dat/: __init__.py  manager.py  servers.py
py_src/jupyter_ws_contents/: handlers.py  serverextension.py
src/: datbutton.ts  manager.ts  plugin.ts
style/: index.css
