[metadata]
name = jupyter-dat
description = dat support for Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = author_email = deathbeds
author = dead pixels collective
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
package_dir =
    = py_src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    notebook >=4.3.1
    watchgod
    jsonpatch


[options.entry_points]
jupyter_serverproxy_servers =
  discovery-swarm-web = jupyter_dat.servers:discovery_swarm_web

[options.packages.find]
where =
    py_src
